# PicassoEQ

./: .gitignore  CMakeLists.txt  PicassoEQ.jucer  picasso.filtergraph
Source/: CMakeLists.txt  FilterSolver.cpp  FilterSolver.h  PluginAgent.cpp  PluginAgent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TypeHelper.h
Source/dsp/: IRRFilter.cpp  IRRFilter.h
cmake/: cpm.cmake
test/: CMakeLists.txt
test/source/: PicassoEQ.t.cpp
